Renaming of plugin from craftplus to just plus

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "craft/craft-plus",
+    "name": "craft/plus",
     "autoload": {},
     "config": {
         "vendor-dir": "vendor",
